Bug fixed: Ul not overflow anymore.

--- a/css/Body+main.css
+++ b/css/Body+main.css
@@ -7,9 +7,10 @@ Textfield: (color: #fefefe)
 */
 
 body {
-    background: -webkit-radial-gradient(circle, #8a2be2, #4b0082, #9400d3);
-    height: 100vh;
-    margin:0;
+        background: -webkit-radial-gradient(circle, #8a2be2, #4b0082, #9400d3);
+        height: 100vh;
+        margin:auto 0;
+        max-width: 100vw;
 }
 
 main{
@@ -17,4 +18,6 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    max-width: 100vw;
 }
