--- a/css/Containers.css
+++ b/css/Containers.css
@@ -3,7 +3,7 @@
   background-color: rgb(67, 20, 99);
   margin-top: 200px;
   margin-bottom: 100px;
-  max-width: 2000px;
+ 
   border-radius: 8px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
