--- a/css/Lists.css
+++ b/css/Lists.css
@@ -7,6 +7,7 @@ ul {
   left: 500px;
   list-style: none;
   display: flex;
+  width: fit-content;
 }
 nav {
 }
